@@ -12,6 +12,10 @@ CHANGES
   - session.merge() will not expire attributes on the returned
     instance if that instance is "pending".  [ticket:1789]
 
+  - fixed __setstate__ method of CollectionAdapter to not
+    fail during deserialize where parent InstanceState not
+    yet unserialized.  [ticket:1802]
+
 - sql
   - expr.in_() now accepts a text() construct as the argument.
     Grouping parenthesis are added automatically, i.e. usage
